Update project images and descriptions in HTML

--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=3">
+  <link rel="stylesheet" href="./style.css?v=7">
 </head>
-<body>
+<body class="page-enter">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
@@ -25,21 +25,27 @@
 
     <div class="project-grid">
       <article class="project-card">
-        <img src="images/project1.svg" alt="Gravity car thumbnail">
+        <img src="images/project1.svg" alt="Gravity car icon"
+             width="800" height="480"
+             loading="lazy" decoding="async">
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
         <p>Prototype built from lightweight materials focusing on low friction and mass distribution. Click for sketches and build notes.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/project2.svg" alt="Flight sim thumbnail">
+        <img src="images/project2.svg" alt="Flight simulation icon"
+             width="800" height="480"
+             loading="lazy" decoding="async">
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
-        <p>Numerical integration based flight dynamics sim with simple control experiments and result plots. Click for charts and code notes.</p>
+        <p>Numerical integration based flight dynamics sim with control experiments and result plots. Click for charts and code notes.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/project3.svg" alt="Portfolio thumbnail">
+        <img src="images/project3.svg" alt="Portfolio website icon"
+             width="800" height="480"
+             loading="lazy" decoding="async">
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
-        <p>The responsive website you're viewing now. Click for design sketches and assets used in the site.</p>
+        <p>The site you're viewing now. Click for design sketches and assets used in the site.</p>
       </article>
     </div>
   </main>
