Enhance image elements with attributes
Updated image tags to include width, height, loading, and decoding attributes for better performance and accessibility.

--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gravity-Powered Car — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=6">
+  <link rel="stylesheet" href="../style.css?v=7">
 </head>
 <body class="page-enter">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -23,9 +23,21 @@
     <h2>Gravity-Powered Car (Recycled Materials)</h2>
 
     <section class="project-media">
-      <figure><img src="../images/sketch1.jpg" alt="Sketch 1"><figcaption>Sketch 1 — concept views</figcaption></figure>
-      <figure><img src="../images/sketch2.jpg" alt="Sketch 2"><figcaption>Sketch 2 — ballast cavity</figcaption></figure>
-      <figure><img src="../images/project1.svg" alt="Prototype thumbnail"><figcaption>Prototype thumbnail</figcaption></figure>
+      <figure>
+        <img src="../images/sketch1.jpg" alt="Sketch 1 concept views"
+             width="1200" height="800" loading="lazy" decoding="async">
+        <figcaption>Sketch 1 — concept views</figcaption>
+      </figure>
+      <figure>
+        <img src="../images/sketch2.jpg" alt="Sketch 2 ballast cavity"
+             width="1200" height="800" loading="lazy" decoding="async">
+        <figcaption>Sketch 2 — ballast cavity</figcaption>
+      </figure>
+      <figure>
+        <img src="../images/project1.svg" alt="Prototype icon"
+             width="800" height="480" loading="lazy" decoding="async">
+        <figcaption>Prototype thumbnail</figcaption>
+      </figure>
     </section>
 
     <section class="project-explanation">
@@ -46,7 +58,7 @@
 
   <div id="lightbox" class="lightbox" aria-hidden="true">
     <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-    <img id="lbImg" src="" alt="">
+    <img id="lbImg" src="" alt="" width="1200" height="800">
     <figcaption id="lbCaption"></figcaption>
   </div>
 
