Enhance image loading attributes in HTML
Updated image attributes for better performance and added new image loading attributes.

--- a/projects/flight-path-simulation.html
+++ b/projects/flight-path-simulation.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Flight Path Simulation — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=6">
+  <link rel="stylesheet" href="../style.css?v=7">
 </head>
 <body class="page-enter">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -23,9 +23,21 @@
     <h2>Flight Path Simulation (Python)</h2>
 
     <section class="project-media">
-      <figure><img src="../images/project2.svg" alt="Sim illustration"><figcaption>Simulation concept</figcaption></figure>
-      <figure><img src="../images/fuelplot.png" alt="Fuel flow plot"><figcaption>Fuel Flow Plot — fuel flow vs altitude</figcaption></figure>
-      <figure><img src="../images/fuelplot2.png" alt="Fuel flow variant"><figcaption>Alternate fuel flow plot</figcaption></figure>
+      <figure>
+        <img src="../images/project2.svg" alt="Simulation concept"
+             width="800" height="480" loading="lazy" decoding="async">
+        <figcaption>Simulation concept</figcaption>
+      </figure>
+      <figure>
+        <img src="../images/fuelplot.png" alt="Fuel flow plot"
+             width="1200" height="800" loading="lazy" decoding="async">
+        <figcaption>Fuel Flow Plot — fuel flow vs altitude</figcaption>
+      </figure>
+      <figure>
+        <img src="../images/fuelplot2.png" alt="Alternate fuel flow plot"
+             width="1200" height="800" loading="lazy" decoding="async">
+        <figcaption>Alternate fuel flow plot</figcaption>
+      </figure>
     </section>
 
     <section class="project-explanation">
@@ -42,7 +54,7 @@
 
   <div id="lightbox" class="lightbox" aria-hidden="true">
     <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-    <img id="lbImg" src="" alt="">
+    <img id="lbImg" src="" alt="" width="1200" height="800">
     <figcaption id="lbCaption"></figcaption>
   </div>
 
