--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=7">
+  <link rel="stylesheet" href="./style.css?v=8">
 </head>
-<body class="page-enter">
+<body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
@@ -25,25 +25,22 @@
 
     <div class="project-grid">
       <article class="project-card">
-        <img src="images/project1.svg" alt="Gravity car icon"
-             width="800" height="480"
-             loading="lazy" decoding="async">
+        <img src="images/sketch1.jpg" alt="Gravity car sketch"
+             width="600" height="400" loading="lazy" decoding="async">
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
         <p>Prototype built from lightweight materials focusing on low friction and mass distribution. Click for sketches and build notes.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/project2.svg" alt="Flight simulation icon"
-             width="800" height="480"
-             loading="lazy" decoding="async">
+        <img src="images/fuelplot.png" alt="Flight simulation fuel plot"
+             width="940" height="559" loading="lazy" decoding="async">
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
         <p>Numerical integration based flight dynamics sim with control experiments and result plots. Click for charts and code notes.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/project3.svg" alt="Portfolio website icon"
-             width="800" height="480"
-             loading="lazy" decoding="async">
+        <img src="images/project3.svg" alt="Portfolio site layout"
+             width="800" height="480" loading="lazy" decoding="async">
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
         <p>The site you're viewing now. Click for design sketches and assets used in the site.</p>
       </article>
