--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gravity-Powered Car — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=7">
+  <link rel="stylesheet" href="../style.css?v=8">
 </head>
-<body class="page-enter">
+<body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
