--- a/projects/flight-path-simulation.html
+++ b/projects/flight-path-simulation.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Flight Path Simulation — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=7">
+  <link rel="stylesheet" href="../style.css?v=8">
 </head>
-<body class="page-enter">
+<body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
@@ -30,12 +30,12 @@
       </figure>
       <figure>
         <img src="../images/fuelplot.png" alt="Fuel flow plot"
-             width="1200" height="800" loading="lazy" decoding="async">
+             width="940" height="559" loading="lazy" decoding="async">
         <figcaption>Fuel Flow Plot — fuel flow vs altitude</figcaption>
       </figure>
       <figure>
         <img src="../images/fuelplot2.png" alt="Alternate fuel flow plot"
-             width="1200" height="800" loading="lazy" decoding="async">
+             width="940" height="562" loading="lazy" decoding="async">
         <figcaption>Alternate fuel flow plot</figcaption>
       </figure>
     </section>
