--- a/projects/portfolio-website.html
+++ b/projects/portfolio-website.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio Website — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=7">
+  <link rel="stylesheet" href="../style.css?v=8">
 </head>
-<body class="page-enter">
+<body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
@@ -53,6 +53,10 @@
     <img id="lbImg" src="" alt="" width="1200" height="800">
     <figcaption id="lbCaption"></figcaption>
   </div>
+
+  <script src="../script.js" defer></script>
+</body>
+</html>
 
   <script src="../script.js" defer></script>
 </body>
