--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Contact — Saimn Zuhairi</title>
-<link rel="stylesheet" href="./style.css?v=3">
+<link rel="stylesheet" href="./style.css?v=8">
 </head>
-<body>
+<body class="page-enter theme-contact">
 <canvas id="starfield" aria-hidden="true"></canvas>
 <header class="navbar">
   <a class="logo" href="index.html" aria-label="Home">
