Refine experience details and update sections
Updated job descriptions for clarity and improved wording. Revised certification and education sections for consistency.

--- a/experience.html
+++ b/experience.html
@@ -4,10 +4,11 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Experience — Saimn Zuhairi</title>
-<link rel="stylesheet" href="./style.css?v=5">
+<link rel="stylesheet" href="./style.css?v=8">
 </head>
-<body>
+<body class="page-enter theme-experience">
 <canvas id="starfield" aria-hidden="true"></canvas>
+
 <header class="navbar">
   <a class="logo" href="index.html" aria-label="Home">
     <h1>Saimn Zuhairi</h1>
@@ -27,42 +28,42 @@
     <article class="timeline-item">
       <h3>Forklift Operator — 3PC (Contract)</h3>
       <p class="meta">Sep 2025 — Present • On-site (Australia)</p>
-      <p>Unloading containers, manual heavy lifting, pallet stacking and wrapping, conveyor belt handling, high-reach forklift operation. Duties include adherence to safety checks and basic maintenance/inspection of forklift equipment.</p>
+      <p>Unloading containers, manual heavy lifting, pallet stacking and wrapping, conveyor belt handling, high‑reach forklift operation. Performed routine inspection and basic maintenance checks to ensure safe operation.</p>
       <p class="muted">Skills: Forklift Operation · Forklift Inspection · Forklift Maintenance · Manual Labor</p>
     </article>
 
     <article class="timeline-item">
       <h3>Customer Service Manager — Broaster Chicken (Part-time)</h3>
       <p class="meta">Mar 2021 — Jul 2025 • On-site (Australia)</p>
-      <p>Ordering and managing stock, working under pressure, supervising a team (~5 workers), managing finances and improving weekly revenue. Focus on customer service operations and team coordination.</p>
+      <p>Ordering and managing stock, working under pressure, leading a ~5‑person team, managing finances and growing weekly revenue through improved operations and customer service.</p>
       <p class="muted">Skills: Certificate II Hospitality · Team Management · Operations Management · Customer Service Management · Customer Support</p>
     </article>
 
     <article class="timeline-item">
       <h3>Barista / Hospitality — The Coffee Emporium Liverpool (Part-time)</h3>
       <p class="meta">Jul 2023 — Jul 2023 • On-site</p>
-      <p>Serving beverages and food, cleaning and organising tables, closing duty, kitchen hand tasks.</p>
+      <p>Served beverages and food, cleaned and organised tables, handled close‑down duties, assisted as kitchen hand.</p>
       <p class="muted">Skills: Certificate II Hospitality · Food Service · Food Safety · Food Handling · Hygiene · Making Coffee</p>
     </article>
 
     <article class="timeline-item">
       <h3>Hospitality — Masala Kitchen (Part-time)</h3>
       <p class="meta">Mar 2023 — Mar 2023 • On-site (Sydney)</p>
-      <p>Organising and cleaning tables, serving customers and handling customer orders.</p>
+      <p>Organised and cleaned tables, served customers and handled customer orders during peak hours.</p>
       <p class="muted">Skills: Certificate II Hospitality · Food Handling · Food Safety · Food Service · Hygiene</p>
     </article>
 
     <article class="timeline-item">
       <h3>Kitchen Hand — Charcoal Chicken Moorebank (Part-time)</h3>
       <p class="meta">Apr 2020 — Dec 2020 • On-site (Liverpool, NSW)</p>
-      <p>Cleaning and organising duties, preparation of fresh food, customer service and closing duties.</p>
+      <p>Cleaning and organisation, preparation of fresh food, customer service and nightly closing procedures.</p>
       <p class="muted">Skills: Hospitality · Food Safety · Food Service · Food Preparation</p>
     </article>
 
     <article class="timeline-item">
       <h3>Online Advertising Manager — Direct Appliances (Part-time)</h3>
       <p class="meta">Mar 2020 — May 2020 • On-site</p>
-      <p>Advertising products, increasing revenue, improving customer relationships and trust through online marketing.</p>
+      <p>Advertised products, increased revenue, improved customer relationships and trust with targeted online marketing.</p>
       <p class="muted">Skills: Online Advertising · Online Marketing</p>
     </article>
   </section>
@@ -70,14 +71,14 @@
   <section aria-labelledby="certs">
     <h3 id="certs">Licenses & Certifications</h3>
     <ul>
-      <li><strong>Forklift Certification</strong> — Ace Forklift. (Issued Feb 2025 • expires Feb 2030). <span class="muted">Skills: Forklift Operation, Forklift Maintenance</span></li>
-      <li><strong>Certificate II Hospitality: Food & Beverages</strong> — NSW Food Authority. (Issued Nov 2024). <span class="muted">Skills: Hygiene; Food & Beverage Operations</span></li>
+      <li><strong>Forklift Certification</strong> — Ace Forklift. Issued Feb 2025 (expires Feb 2030). <span class="muted">Skills: Forklift Operation, Forklift Maintenance</span></li>
+      <li><strong>Certificate II Hospitality: Food & Beverages</strong> — NSW Food Authority. Issued Nov 2024. <span class="muted">Skills: Hygiene; Food & Beverage Operations</span></li>
     </ul>
   </section>
 
   <h3>Education</h3>
   <ul>
-    <li><strong>Western Sydney University</strong> — Diploma of Engineering Studies, Engineering (Mar 2025 — Feb 2026). Skills shown: Python, AutoCAD, MATLAB, Web Design & Development, Materials Science, Java.</li>
+    <li><strong>Western Sydney University</strong> — Diploma of Engineering Studies, Engineering (Mar 2025 — Feb 2026). Skills: Python, AutoCAD, MATLAB, Web Design & Development, Materials Science, Java.</li>
     <li><strong>University of South Australia</strong> — Essential Mathematics 1: Algebra and Trigonometry (Engineering) (Dec 2024 — Mar 2025). Grade: Distinction.</li>
     <li><strong>Moorebank High School</strong> — (Jan 2019 — Dec 2024). Skills: English, Hospitality, Mathematics, Music, Economics, Certificate II Hospitality.</li>
   </ul>
