Refine content and image attributes in index.html
Updated various text and image attributes for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=8">
+  <link rel="stylesheet" href="./style.css?v=9">
 </head>
 <body class="page-enter theme-home">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -31,72 +31,62 @@
            fetchpriority="high">
       <div class="about-text">
         <h2>About Me</h2>
-        <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer focusing on flight dynamics, control systems and embedded systems. I work on simulation and physical prototyping (Python, sensors, lightweight mechanisms) and CAD-driven designs. I'm actively seeking internships and entry-level roles — <a href="contact.html">get in touch</a>.</p>
+        <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer focusing on flight dynamics, control systems and embedded systems. I work on simulation and physical prototyping (Python, sensors, lightweight mechanisms) and CAD-driven designs. I’m actively seeking internships and entry-level roles — <a href="contact.html">get in touch</a>.</p>
       </div>
     </section>
 
-    <h2>Design Sketches (open a project to view images)</h2>
+    <h2>Design Sketches (open a project to view full sets)</h2>
     <section class="sketch-thumbs">
       <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch1.jpg" alt="Sketch 1"
-             width="480" height="320"
-             loading="lazy" decoding="async">
-        <span>Gravity car — sketches</span>
+        <img src="images/sketch1.jpg" alt="Sketch 1" width="480" height="320" loading="lazy" decoding="async">
+        <span>Gravity car — concept</span>
       </a>
       <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch2.jpg" alt="Sketch 2"
-             width="480" height="320"
-             loading="lazy" decoding="async">
-        <span>Ballast cavity — sketches</span>
-      </a>
-      <a href="projects/portfolio-website.html" class="thumb-link">
-        <img src="images/sketch3.jpg" alt="Sketch 3"
-             width="480" height="320"
-             loading="lazy" decoding="async">
-        <span>Refined body / cockpit</span>
+        <img src="images/sketch2.jpg" alt="Sketch 2 ballast cavity" width="480" height="320" loading="lazy" decoding="async">
+        <span>Ballast cavity</span>
       </a>
       <a href="projects/flight-path-simulation.html" class="thumb-link">
-        <img src="images/fuelplot.png" alt="Fuel flow plot"
-             width="940" height="559"
-             loading="lazy" decoding="async">
+        <img src="images/fuelplot.png" alt="Fuel flow plot" width="940" height="559" loading="lazy" decoding="async">
         <span>Fuel flow plot</span>
+      </a>
+      <a href="projects/portfolio-website.html" class="thumb-link">
+        <img src="images/sketch3.jpg" alt="Portfolio sketch" width="480" height="320" loading="lazy" decoding="async">
+        <span>Portfolio sketch</span>
       </a>
     </section>
 
     <h2>Engineering & Aerospace Projects</h2>
-
     <div class="project-grid">
-      <!-- Project cards now use real project-related images on the homepage -->
       <article class="project-card">
         <a href="projects/gravity-powered-car.html">
-          <img src="images/sketch1.jpg" alt="Gravity car sketch"
-               width="600" height="400"
+          <img src="images/gravity-prototype.jpg" alt="Gravity car prototype (wooden build)"
+               width="768" height="768"
                loading="lazy" decoding="async">
         </a>
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
-        <p>Lightweight vehicle testbed for mass distribution and rolling-resistance experiments — open for photos, sketches and results.</p>
+        <p>Prototype for testing mass distribution and rolling resistance; includes sketches and a physical build.</p>
         <a class="btn small" href="projects/gravity-powered-car.html">View details</a>
       </article>
 
       <article class="project-card">
         <a href="projects/flight-path-simulation.html">
-          <img src="images/fuelplot2.png" alt="Flight simulation fuel plot"
-               width="940" height="562"
+          <img src="images/aircraft.jpg" alt="Aircraft representing flight dynamics simulation"
+               width="317" height="159"
                loading="lazy" decoding="async">
         </a>
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
-        <p>RK4-based numerical model, simple PID experiments and fuel-flow analysis — open for code & plots.</p>
+        <p>RK4 integration + PID experiments for altitude and heading; wind and fuel-flow analysis.</p>
         <a class="btn small" href="projects/flight-path-simulation.html">View details</a>
       </article>
 
       <article class="project-card">
         <a href="projects/portfolio-website.html">
-          <img src="images/project3.svg" alt="Portfolio website layout"
+          <img src="images/project3.svg" alt="Portfolio layout mock"
                width="800" height="480"
                loading="lazy" decoding="async">
         </a>
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
-        <p>Static HTML/CSS/JS, lightweight and accessible. Click to see design assets and notes.</p>
+        <p>Static, accessible implementation; light JS enhancements and performance-conscious design.</p>
         <a class="btn small" href="projects/portfolio-website.html">View details</a>
       </article>
     </div>
