--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=8">
+  <link rel="stylesheet" href="./style.css?v=9">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
-
   <header class="navbar">
     <a class="logo" href="index.html" aria-label="Home"><h1>Saimn Zuhairi</h1></a>
     <nav>
@@ -21,28 +20,28 @@
 
   <main class="section">
     <h2>Projects</h2>
-    <p>Click a project to view sketches, pictures and a short explanation.</p>
+    <p>Browse the projects and open a detail page for sketches, images and technical notes.</p>
 
     <div class="project-grid">
       <article class="project-card">
-        <img src="images/sketch1.jpg" alt="Gravity car sketch"
-             width="600" height="400" loading="lazy" decoding="async">
+        <img src="images/gravity-prototype.jpg" alt="Gravity car wooden prototype"
+             width="768" height="768" loading="lazy" decoding="async">
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
-        <p>Prototype built from lightweight materials focusing on low friction and mass distribution. Click for sketches and build notes.</p>
+        <p>Physical prototype + conceptual sketches exploring friction and mass distribution.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/fuelplot.png" alt="Flight simulation fuel plot"
-             width="940" height="559" loading="lazy" decoding="async">
+        <img src="images/aircraft.jpg" alt="Aircraft used to depict flight path dynamics"
+             width="317" height="159" loading="lazy" decoding="async">
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
-        <p>Numerical integration based flight dynamics sim with control experiments and result plots. Click for charts and code notes.</p>
+        <p>Numerical integration model: wind sensitivity, fuel-flow plots and PID control trials.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/project3.svg" alt="Portfolio site layout"
+        <img src="images/project3.svg" alt="Portfolio site mock"
              width="800" height="480" loading="lazy" decoding="async">
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
-        <p>The site you're viewing now. Click for design sketches and assets used in the site.</p>
+        <p>Static accessible design with performance-focused JS for subtle animations.</p>
       </article>
     </div>
   </main>
