Add fallback images for project cards
Updated image elements to include fallback sources for error handling.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=9">
+  <link rel="stylesheet" href="./style.css?v=10">
 </head>
 <body class="page-enter theme-home">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -59,9 +59,12 @@
     <div class="project-grid">
       <article class="project-card">
         <a href="projects/gravity-powered-car.html">
-          <img src="images/gravity-prototype.jpg" alt="Gravity car prototype (wooden build)"
-               width="768" height="768"
-               loading="lazy" decoding="async">
+          <img
+            src="images/gravity-prototype.jpg"
+            alt="Gravity car prototype (wooden build)"
+            width="768" height="768"
+            loading="lazy" decoding="async"
+            onerror="this.onerror=null; this.src='images/sketch1.jpg';">
         </a>
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
         <p>Prototype for testing mass distribution and rolling resistance; includes sketches and a physical build.</p>
@@ -70,9 +73,12 @@
 
       <article class="project-card">
         <a href="projects/flight-path-simulation.html">
-          <img src="images/aircraft.jpg" alt="Aircraft representing flight dynamics simulation"
-               width="317" height="159"
-               loading="lazy" decoding="async">
+          <img
+            src="images/aircraft.jpg"
+            alt="Aircraft representing flight dynamics simulation"
+            width="317" height="159"
+            loading="lazy" decoding="async"
+            onerror="this.onerror=null; this.src='images/fuelplot2.png';">
         </a>
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
         <p>RK4 integration + PID experiments for altitude and heading; wind and fuel-flow analysis.</p>
@@ -81,9 +87,12 @@
 
       <article class="project-card">
         <a href="projects/portfolio-website.html">
-          <img src="images/project3.svg" alt="Portfolio layout mock"
-               width="800" height="480"
-               loading="lazy" decoding="async">
+          <img
+            src="images/project3.svg"
+            alt="Portfolio website layout"
+            width="800" height="480"
+            loading="lazy" decoding="async"
+            onerror="this.onerror=null; this.src='images/sketch3.jpg';">
         </a>
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
         <p>Static, accessible implementation; light JS enhancements and performance-conscious design.</p>
