Add error handling for project images
Updated image elements to handle loading errors by providing fallback images.

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=9">
+  <link rel="stylesheet" href="./style.css?v=10">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -24,22 +24,34 @@
 
     <div class="project-grid">
       <article class="project-card">
-        <img src="images/gravity-prototype.jpg" alt="Gravity car wooden prototype"
-             width="768" height="768" loading="lazy" decoding="async">
+        <img
+          src="images/gravity-prototype.jpg"
+          alt="Gravity car wooden prototype"
+          width="768" height="768"
+          loading="lazy" decoding="async"
+          onerror="this.onerror=null; this.src='images/sketch1.jpg';">
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
         <p>Physical prototype + conceptual sketches exploring friction and mass distribution.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/aircraft.jpg" alt="Aircraft used to depict flight path dynamics"
-             width="317" height="159" loading="lazy" decoding="async">
+        <img
+          src="images/aircraft.jpg"
+          alt="Aircraft used to depict flight path dynamics"
+          width="317" height="159"
+          loading="lazy" decoding="async"
+          onerror="this.onerror=null; this.src='images/fuelplot.png';">
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
         <p>Numerical integration model: wind sensitivity, fuel-flow plots and PID control trials.</p>
       </article>
 
       <article class="project-card">
-        <img src="images/project3.svg" alt="Portfolio site mock"
-             width="800" height="480" loading="lazy" decoding="async">
+        <img
+          src="images/project3.svg"
+          alt="Portfolio site mock"
+          width="800" height="480"
+          loading="lazy" decoding="async"
+          onerror="this.onerror=null; this.src='images/sketch3.jpg';">
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
         <p>Static accessible design with performance-focused JS for subtle animations.</p>
       </article>
