--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gravity-Powered Car — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=9">
+  <link rel="stylesheet" href="../style.css?v=10">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -23,8 +23,11 @@
 
     <section class="project-media">
       <figure>
-        <img src="../images/gravity-prototype.jpg" alt="Wooden gravity car prototype"
-             width="768" height="768" loading="lazy" decoding="async">
+        <img src="../images/gravity-prototype.jpg"
+             alt="Wooden gravity car prototype"
+             width="768" height="768"
+             loading="lazy" decoding="async"
+             onerror="this.onerror=null; this.src='../images/sketch1.jpg';">
         <figcaption>Physical prototype used for friction tests.</figcaption>
       </figure>
       <figure>
@@ -52,18 +55,6 @@
       <p>Ballast shifts of only millimeters produced measurable differences in run distance. Alignment errors increased drag via lateral oscillation.</p>
     </section>
 
-    <a class="btn" href="../projects.html">Back to projects</a>
-  </main>
-
-  <div id="lightbox" class="lightbox" aria-hidden="true">
-    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-    <img id="lbImg" src="" alt="" width="1200" height="800">
-    <figcaption id="lbCaption"></figcaption>
-  </div>
-
-  <script src="../script.js" defer></script>
-</body>
-</html>
     <a class="btn" href="../projects.html">Back to projects</a>
   </main>
 
