--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gravity-Powered Car — Saimn Zuhairi</title>
+  <title>Flight Path Simulation — Saimn Zuhairi</title>
   <link rel="stylesheet" href="../style.css?v=10">
 </head>
 <body class="page-enter theme-projects">
@@ -19,40 +19,36 @@
   </header>
 
   <main class="section">
-    <h2>Gravity-Powered Car (Recycled Materials)</h2>
+    <h2>Flight Path Simulation (Python)</h2>
 
     <section class="project-media">
       <figure>
-        <img src="../images/gravity-prototype.jpg"
-             alt="Wooden gravity car prototype"
-             width="768" height="768"
+        <img src="../images/aircraft.jpg"
+             alt="Representative aircraft for simulation"
+             width="317" height="159"
              loading="lazy" decoding="async"
-             onerror="this.onerror=null; this.src='../images/sketch1.jpg';">
-        <figcaption>Physical prototype used for friction tests.</figcaption>
+             onerror="this.onerror=null; this.src='../images/project2.svg';">
+        <figcaption>Representative aircraft for fuel‑flow & wind sensitivity.</figcaption>
       </figure>
       <figure>
-        <img src="../images/sketch1.jpg" alt="Concept sketch views"
-             width="1200" height="800" loading="lazy" decoding="async">
-        <figcaption>Sketch 1 — concept views</figcaption>
+        <img src="../images/fuelplot.png" alt="Fuel flow plot"
+             width="940" height="559" loading="lazy" decoding="async">
+        <figcaption>Fuel Flow Plot — altitude vs flow with wind cases.</figcaption>
       </figure>
       <figure>
-        <img src="../images/sketch2.jpg" alt="Ballast cavity sketch"
-             width="1200" height="800" loading="lazy" decoding="async">
-        <figcaption>Sketch 2 — ballast cavity</figcaption>
+        <img src="../images/fuelplot2.png" alt="Alternate fuel flow plot"
+             width="940" height="562" loading="lazy" decoding="async">
+        <figcaption>Alternate fuel flow plot for comparison.</figcaption>
       </figure>
     </section>
 
     <section class="project-explanation">
-      <h3>Overview</h3>
-      <p>Testbed for evaluating how mass placement and axle alignment impact downhill performance.</p>
-      <h3>Materials & fabrication</h3>
-      <ul>
-        <li>Body: recycled wood / foam variants in concept stage.</li>
-        <li>Wheels: simple discs; future upgrade to low-friction bearings.</li>
-        <li>Ballast: adjustable metal mass inside cavity.</li>
-      </ul>
-      <h3>Measurements & results</h3>
-      <p>Ballast shifts of only millimeters produced measurable differences in run distance. Alignment errors increased drag via lateral oscillation.</p>
+      <h3>Model & assumptions</h3>
+      <p>Simplified point‑mass aircraft; empirical drag; thrust and fuel model; linear lift in operating AoA band.</p>
+      <h3>Numerical method</h3>
+      <p>RK4 fixed‑step integrator; PID trials for altitude/heading hold under changing wind vectors.</p>
+      <h3>How to run</h3>
+      <p>Dependencies: numpy, matplotlib. Example: <code>python3 simulate.py --altitude 34000 --wind -20</code>.</p>
     </section>
 
     <a class="btn" href="../projects.html">Back to projects</a>
